added documenntation and some error checking